# ppExtender

./: .gitignore  ARCHITECTURE.md  PROJECT_SUMMARY.md  README.md  package.json  pyproject.toml  run-etl.sh
app/: package-lock.json  package.json  tsconfig.app.json
app/src/: App.test.tsx  App.tsx  api.ts
app/src/__tests__/: App.test.tsx  BeatmapCard.test.tsx  CohortPreview.test.tsx  RecommendationsList.test.tsx  SeedInput.test.tsx
app/src/components/: BeatmapCard.tsx  CohortPreview.tsx  RecommendationsList.tsx  SeedInput.tsx
config/: mariadb_parallel.cnf
data/: README.md
docs/: IMPORT_OPTIMIZATION.md
pipelines/: duckdb_pipeline.py  parquet_writer.py  recommender_queries.py  run_pipeline.py  sql_parser.py  sql_parser_fast.py
scripts/: TEST_RESULTS.md  import_duckdb_native.sh  import_mysql.sh  import_parallel.sh  move_mysql_data.sh  parallel_load_data.sh  sql_to_csv_parallel.py  sql_to_parquet.py
scripts/lib/: parallel_utils.py  sql_parser.py
server/: package-lock.json  package.json
server/src/: index.test.ts  index.ts
tests/: test_duckdb_pipeline.py  test_e2e.py  test_parquet_writer.py  test_recommender_queries.py  test_sql_parser.py
