[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osu-recommender-etl"
version = "0.1.0"
description = "ETL pipeline for osu! beatmap recommender"
requires-python = ">=3.8"
dependencies = [
    "pyarrow",
    "duckdb",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
